@@ -4,46 +4,83 @@ import com.Spring.microservices.product.dto.ProductRequest;
 import com.Spring.microservices.product.dto.ProductResponse;
 import com.Spring.microservices.product.model.Product;
 import com.Spring.microservices.product.repository.ProductRepository;
-import lombok.Data;
-import lombok.NoArgsConstructor;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.stereotype.Service;
 
-import java.security.PublicKey;
+import java.math.BigDecimal;
 import java.util.List;
+import java.util.stream.Collectors;
 
-@Slf4j
-@Data
-@RequiredArgsConstructor
 @Service
+@RequiredArgsConstructor
+@Slf4j
 public class ProductService {
+
     private final ProductRepository productRepository;
 
-    public ProductResponse createProduct(ProductRequest productRequest){
-
+    public ProductResponse createProduct(ProductRequest productRequest) {
+        // Validate input
+        validateProductRequest(productRequest);
+        
+        log.info("Creating product: {}", productRequest.getName());
+        
         Product product = Product.builder()
                 .name(productRequest.getName())
                 .description(productRequest.getDescription())
-                .Price(productRequest.getPrice())
+                .price(productRequest.getPrice())
                 .build();
-        productRepository.save(product);
-        log.info("Product created successfully");
 
-        return new ProductResponse(product.getId(), product.getName(), product.getDescription(), product.getPrice());
-
+        Product savedProduct = productRepository.save(product);
+        log.info("Product created successfully with id: {}", savedProduct.getId());
+        
+        return mapToProductResponse(savedProduct);
     }
 
-
-    public List<ProductResponse> getAllProducts(){
-        return productRepository.findAll()
-                .stream()
-                .map(product -> new ProductResponse(product.getId(), product.getName(), product.getDescription(), product.getPrice()))
-                .toList();
-
-
-
+    public List<ProductResponse> getAllProducts() {
+        log.info("Fetching all products");
+        List<Product> products = productRepository.findAll();
+        return products.stream()
+                .map(this::mapToProductResponse)
+                .collect(Collectors.toList());
     }
 
+    /**
+     * Validates the product request
+     * @param request The product request to validate
+     * @throws IllegalArgumentException if validation fails
+     */
+    private void validateProductRequest(ProductRequest request) {
+        if (request == null) {
+            throw new IllegalArgumentException("Product request cannot be null");
+        }
+        
+        // Validate product name
+        if (request.getName() == null || request.getName().trim().isEmpty()) {
+            throw new IllegalArgumentException("Product name cannot be null or empty");
+        }
+        
+        // Validate price
+        if (request.getPrice() == null) {
+            throw new IllegalArgumentException("Product price cannot be null");
+        }
+        
+        if (request.getPrice().compareTo(BigDecimal.ZERO) < 0) {
+            throw new IllegalArgumentException("Product price cannot be negative");
+        }
+        
+        // Optional: Validate description
+        if (request.getDescription() != null && request.getDescription().length() > 500) {
+            throw new IllegalArgumentException("Product description cannot exceed 500 characters");
+        }
+    }
 
+    private ProductResponse mapToProductResponse(Product product) {
+        return ProductResponse.builder()
+                .id(product.getId())
+                .name(product.getName())
+                .description(product.getDescription())
+                .price(product.getPrice())
+                .build();
+    }
 }
